--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>ZAGALOVOK1</h1>
     <h2>ZAGALOVOK2</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, non!</p>
+    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed autem asperiores, iure quas optio delectus quia dolorem atque alias id.</div>
 </body>
 </html>
