--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>ZAGALOVOK1</h3>
     <h4>ZAGALOVOK2</h4>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, non!</p>
+    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, officia similique quis laborum aperiam fugit?</div>
 </body>
 </html>
