--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>ZAGALOVOK2</h4>
+    <h1>Zagalovok1</h1>
+    <h2>Zagalovok2</h2>
+    <h3>Zagalovok3</h3>
+    <h4>ZAGALOVOK4</h4>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, non!</p>
     <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, officia similique quis laborum aperiam fugit?</div>
 </body>
